# games-score-statistics

./: CMakeLists.txt  README.md  demo.cbp  demo.layout  main.c  stdhead.h  ui_setting.h
doc/: 课程设计.doc
header/: ui.h
include/: stdhead.h  ui.h
lib/: _datastructhead.h  _log.c  _log.h  _stdhead.h  _str.c  _str.h  _ui.c  _ui.h  log.h  stdhead.h  str.c  str.h  ui.h
sources/doc/: 课程设计.doc
src/: log.c  ui.c
src/dao/: tofile.c  tofile.h
src/datastructs/: list.c  list.h  stack.c  stack.h
src/entity/: school.c  school.h
src/logs/: _log.c  _log.h  log.c  log.h
src/objects/: contact.c  contact.h  project.c  project.h  school.c  school.h
src/services/: input.c  input.h  input_info.c  input_info.h  output.c  output.h  output_info.c  output_info.h  sort.c  sort.h  start.c  start.h
src/views/: _ui.c  _ui.h
view/: ui.c  ui.h
